@@ -16,6 +16,7 @@ Version 1.1.1 to be released
 - Enh #820: Added CAccessRule::message to allow customizing authorization error message (Qiang)
 - Enh #857: Added $exit parameter to CController::forward() (Qiang)
 - Enh #872: Added CFlexWidget::allowFullScreen (Qiang)
+- Enh #941: AR now allows MANY_MANY relation to be specified more flexibly (Qiang)
 - Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - Enh: Improved the code generated by yiic, including menu refactoring, filtering/search support, and using active form (Qiang)
 - Enh: Improved CHtml::beginForm() to auto-generate hidden fields for a GET form whose action contains query string (Qiang)
